start working on converting the dynamic models to SBML, so they can be simulated by another simulator; experiment with absolute tolerances for the CVODE ODE solver

--- a/wc_sim/config/core.schema.cfg
+++ b/wc_sim/config/core.schema.cfg
@@ -37,3 +37,6 @@
         max_allowed_init_accounted_fraction = float(min=1.0, default=1.5)
         # in a compartment, the accounted fraction is the fraction of mass accounted for by specified species
         # in the compartment; accounted fractions above max_allowed_init_accounted_fraction are reported as errors
+
+        abs_ode_solver_tolerance = float(min=1e-16, default=1e-12)
+        # the absolute tolerance used by the ODE solver
