--- a/wc_sim/config/core.default.cfg
+++ b/wc_sim/config/core.default.cfg
@@ -11,3 +11,4 @@
         checkpointing_sim_obj_name = CHECKPOINTING_SIM_OBJ
         mean_to_std_dev_ratio = 10.0
         max_allowed_init_accounted_fraction = 1.5
+        abs_ode_solver_tolerance = 1e-12
