define and use a configurable minimum allowed population of any species -- needed for continuous integration algorithms, like ODE; fix ODE problem which wasn't solving at simulation start time

--- a/wc_sim/config/core.default.cfg
+++ b/wc_sim/config/core.default.cfg
@@ -12,3 +12,4 @@
         mean_to_std_dev_ratio = 10.0
         max_allowed_init_accounted_fraction = 1.5
         abs_ode_solver_tolerance = 1e-12
+        minimum_allowed_population = -1e-3
