--- a/wc_sim/config/core.schema.cfg
+++ b/wc_sim/config/core.schema.cfg
@@ -40,3 +40,6 @@
 
         abs_ode_solver_tolerance = float(min=1e-16, default=1e-12)
         # the absolute tolerance used by the ODE solver
+
+        minimum_allowed_population = float(default=-1e-3)
+        # the minimum allowed population of any species
