remove epsilon time difference -- use sub-time instead to control order of synchronous events; add num_ssa_validation_sim_runs config param from wc_sim_fall_18

--- a/wc_sim/config/core.default.cfg
+++ b/wc_sim/config/core.default.cfg
@@ -5,7 +5,6 @@
         dfba_time_step = 1.0
         initial_ssa_wait_ema = 1
         ssa_event_logging_spacing = 100
-        epsilon = 1e-9
         checkpoint_period = 10
         default_center_of_mass = 10
         checkpointing_sim_obj_name = CHECKPOINTING_SIM_OBJ
@@ -13,3 +12,4 @@
         max_allowed_init_accounted_fraction = 1.5
         abs_ode_solver_tolerance = 1e-12
         minimum_allowed_population = -1e-3
+        num_ssa_validation_sim_runs = 20
