--- a/wc_sim/config/core.schema.cfg
+++ b/wc_sim/config/core.schema.cfg
@@ -1,7 +1,7 @@
 [wc_sim]
     [[multialgorithm]]
         interpolate = boolean(default=True)
-        # whether to interpolate species counts when executing get_population()
+        # whether to interpolate species counts when executing DynamicSpeciesState.get_population()
         # interpolation incorporates a linear estimate of the change in copy number 
         # since the last update by a continuous submodel
 
@@ -17,10 +17,6 @@
         ssa_event_logging_spacing = integer(min=0, default=100)
         # the interval (in simulated seconds) between log messages for SSA events
         
-        epsilon = float(min=0, default=1e-9)
-        # a small time period (in simulated seconds) for shifting event times to control the order of
-        # near simultaneous events
-
         checkpoint_period = float(min=0, default=10)
         # the period in simulated seconds between checkpoints
 
@@ -43,3 +39,6 @@
 
         minimum_allowed_population = float(default=-1e-3)
         # the minimum allowed population of any species
+
+         num_ssa_validation_sim_runs = integer(min=1, default=100)
+         # the default number of simulation runs in a Monte Carlo validation
