--- a/wc_sim/config/debug.default.cfg
+++ b/wc_sim/config/debug.default.cfg
@@ -1,4 +1,4 @@
-# log config for the wc simulator examples
+# log config for the whole-cell simulator, wc_sim
 [debug_logs]
     [[handlers]]
         [[[debug.file]]]
