comprehensively replace regular logs with FastLogger; create plan & some code for 'make concentrations' -- solve ODEs in concentration space; create unique names for different handlers and loggers; save performance tests of SSA in permanent wc_sim_performance_log.txt

--- a/examples/config/debug.default.cfg
+++ b/examples/config/debug.default.cfg
@@ -1,20 +1,20 @@
 # log config for the wc simulator examples
 [debug_logs]
     [[handlers]]
-        [[[debug.file]]]
+        [[[debug.examples.file]]]
             class = FileHandler
-            filename = ~/.wc/log/wc_sim.debug.log
+            filename = ~/.wc/log/wc_sim.debug.examples.log
             level = debug
 
-        [[[debug.console]]]
+        [[[debug.examples.console]]]
             class = StdOutHandler
             level = info
 
     [[loggers]]
-        [[[wc.debug.file]]]
+        [[[wc.debug.examples.file]]]
             template = {timestamp}; {name:s}; {level:s}; {source}:{function:s}:{line:d}; {message:s}
-            handler = debug.file
+            handler = debug.examples.file
 
-        [[[wc.debug.console]]]            
+        [[[wc.debug.examples.console]]]
             template = {timestamp}; {name:s}; {level:s}; {source}:{function:s}:{line:d}; {message:s}
-            handler = debug.console
+            handler = debug.examples.console
