--- a/wc_sim/config/debug.default.cfg
+++ b/wc_sim/config/debug.default.cfg
@@ -1,7 +1,7 @@
 # log config for the whole-cell simulator, wc_sim
 [debug_logs]
     [[handlers]]
-        [[[debug.file]]]
+        [[[wc_debug.file_handler]]]
             class = FileHandler
             filename = ~/.wc/log/wc_sim.debug.log
             level = info
@@ -13,7 +13,7 @@
     [[loggers]]
         [[[wc.debug.file]]]
             template = {timestamp}; {name:s}; {level:s}; {source}:{function:s}:{line:d}; {sim_time:f}; {message:s}
-            handler = debug.file 
+            handler = wc_debug.file_handler
 
         [[[wc.debug.console]]]
             template = {timestamp}; {name:s}; {level:s}; {source}:{function:s}:{line:d}; {sim_time:f}; {message:s}
