remove {source}:{function:s}:{line:d}; from debug log configs, as logging2 doesn't support stacklevel (which logging does); also removed local_call_depth, which served the same purpose as stacklevel in our old log system; will replace it when stacklevel is available, or write our own

--- a/examples/config/debug.default.cfg
+++ b/examples/config/debug.default.cfg
@@ -4,7 +4,7 @@
         [[[debug.examples.file]]]
             class = FileHandler
             filename = ~/.wc/log/wc_sim.debug.examples.log
-            level = debug
+            level = info
 
         [[[debug.examples.console]]]
             class = StdOutHandler
@@ -12,9 +12,9 @@
 
     [[loggers]]
         [[[wc.debug.examples.file]]]
-            template = {timestamp}; {name:s}; {level:s}; {source}:{function:s}:{line:d}; {message:s}
+            template = {timestamp}; {name:s}; {level:s}; {message:s}
             handler = debug.examples.file
 
         [[[wc.debug.examples.console]]]
-            template = {timestamp}; {name:s}; {level:s}; {source}:{function:s}:{line:d}; {message:s}
+            template = {timestamp}; {name:s}; {level:s}; {message:s}
             handler = debug.examples.console
