--- a/wc_sim/config/debug.default.cfg
+++ b/wc_sim/config/debug.default.cfg
@@ -12,9 +12,9 @@
 
     [[loggers]]
         [[[wc.debug.file]]]
-            template = {timestamp}; {name:s}; {level:s}; {source}:{function:s}:{line:d}; {sim_time:f}; {message:s}
+            template = {timestamp}; {name:s}; {level:s}; {sim_time:f}; {message:s}
             handler = wc_debug.file_handler
 
         [[[wc.debug.console]]]
-            template = {timestamp}; {name:s}; {level:s}; {source}:{function:s}:{line:d}; {sim_time:f}; {message:s}
+            template = {timestamp}; {name:s}; {level:s}; {sim_time:f}; {message:s}
             handler = debug.console
