--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,7 @@ jobs:
       # Test code
       - run:
           name: Test code
+          no_output_timeout: 1200
           command: |
             set +e
 
