--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,9 @@
 [pytest]
-filterwarnings  =
+filterwarnings =
+    ignore:\n.*your performance may suffer as PyTables will pickle object.*:
+    ignore::UserWarning
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
     ignore:.*inspect.getargspec.* is deprecated:DeprecationWarning
     ignore:.*invalid escape sequence \\:DeprecationWarning
-    ignore:.*your performance may suffer as PyTables will pickle object.*:
     ignore:.*Related class .* must have a primary attribute.*:
