--- a/wc_sim/config/core.default.cfg
+++ b/wc_sim/config/core.default.cfg
@@ -11,5 +11,6 @@
         mean_to_std_dev_ratio = 10.0
         max_allowed_init_accounted_fraction = 1.5
         abs_ode_solver_tolerance = 1e-12
+        rel_ode_solver_tolerance = 1e-6
         minimum_allowed_population = -1e-3
         num_ssa_verification_sim_runs = 20
