--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,8 @@ jobs:
       # Test code
       - run:
           name: Test code
+          environment:
+            PYTHONFAULTHANDLER: 1
           no_output_timeout: 1800
           command: |
             set +e
