--- a/wc_sim/config/debug.default.cfg
+++ b/wc_sim/config/debug.default.cfg
@@ -4,7 +4,7 @@
         [[[wc_debug.file_handler]]]
             class = FileHandler
             filename = ~/.wc/log/wc_sim.debug.log
-            level = info
+            level = debug
 
         [[[debug.console]]]
             class = StdOutHandler
