to improve performance suspend default run-time error checking in LocalSpeciesPopulation._check_species

--- a/wc_sim/config/core.default.cfg
+++ b/wc_sim/config/core.default.cfg
@@ -14,3 +14,4 @@
         rel_ode_solver_tolerance = 1e-8
         minimum_allowed_population = -1e-3
         num_ssa_verification_sim_runs = 20
+        run_time_error_checking = False
