--- a/wc_sim/config/core.schema.cfg
+++ b/wc_sim/config/core.schema.cfg
@@ -45,3 +45,6 @@
 
         num_ssa_verification_sim_runs = integer(min=1, default=100)
         # the default number of simulation runs in a Monte Carlo validation
+
+        run_time_error_checking = boolean(default=False)
+        # whether to do run-time error checking
