add caching of DynamieExpression eval() calls, controlled by config parameter; clear cache before populations change, such as at the start of an event; stop caching for certain tests, eg ones that measure performance

--- a/wc_sim/config/core.default.cfg
+++ b/wc_sim/config/core.default.cfg
@@ -15,3 +15,4 @@
         minimum_allowed_population = -1e-3
         num_ssa_verification_sim_runs = 20
         run_time_error_checking = False
+        expression_caching = True
