--- a/wc_sim/config/core.schema.cfg
+++ b/wc_sim/config/core.schema.cfg
@@ -48,3 +48,6 @@
 
         run_time_error_checking = boolean(default=False)
         # whether to do run-time error checking
+
+        expression_caching = boolean(default=False)
+        # whether to cache DynamicExpression.eval() calls
