distinguish between two cache invalidation approaches, event_based and reaction_dependency_based; add RunResults equality test; move all caching control to the config file; create config modification method ConfigFileModifier, which works when the config file is loaded at run-time; have dynamic_components.py do this

--- a/wc_sim/config/core.schema.cfg
+++ b/wc_sim/config/core.schema.cfg
@@ -49,5 +49,8 @@
         run_time_error_checking = boolean(default=False)
         # whether to do run-time error checking
 
-        expression_caching = boolean(default=False)
-        # whether to cache DynamicExpression.eval() calls
+        expression_caching = boolean(default=True)
+        # whether caching is active
+
+        cache_invalidation = string(default='reaction_dependency_based')
+        # if caching, the invalidation approach: either reaction_dependency_based or event_based
