--- a/wc_sim/config/core.default.cfg
+++ b/wc_sim/config/core.default.cfg
@@ -16,3 +16,4 @@
         num_ssa_verification_sim_runs = 20
         run_time_error_checking = False
         expression_caching = True
+        cache_invalidation = 'reaction_dependency_based'
