--- a/.karr_lab_build_utils.yml
+++ b/.karr_lab_build_utils.yml
@@ -7,3 +7,8 @@ downstream_dependencies:
 email_notifications:
   - jonrkarr@gmail.com
   - arthur.p.goldberg@mssm.edu
+static_analyses:
+  ignore_unused_requirements:
+    - recordtype
+    - scikits.odes
+  ignore_missing_requirements: []
