--- a/wc_sim/config/core.schema.cfg
+++ b/wc_sim/config/core.schema.cfg
@@ -54,3 +54,6 @@
 
         cache_invalidation = string(default='reaction_dependency_based')
         # if caching, the invalidation approach: either reaction_dependency_based or event_based
+
+        default_rounding = boolean(default=True)
+        # whether species populations get rounded when rounding isn't specified
