Increase CircleCi no_output_timeout to 90m, so that H1 model can be loaded

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
           name: Test code
           environment:
             PYTHONFAULTHANDLER: 1
-          no_output_timeout: 1800
+          no_output_timeout: 90m
           command: |
             set +e
 
